--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -1003,7 +1003,7 @@ textarea {
 	margin-left: auto;
 }
 .like_count:after {
-	content: "{{index .Phrases "topic_like_count"}}";
+	content: "{{index .Phrases "topic_like_count_suffix"}}";
 	margin-right: 6px;
 }
 
