Changed the defaultest default theme to Cosora... For now.
You need the ViewIPs permission to view IPs on logs now.
Added the leftOfNav and rightOfNav docks, more on this soon.
Added a max length for topic titles.
Added a max length for usernames.
Added none as a possible language for the language view counter.
We began adding the notice phrases.
Fixed a misnamed phrase which was spitting out placeholder text.
Localised unknown for the human language phrases.
Moved routeForums to routes.ForumList.
Moved routeRobotsTxt to routes.RobotsTxt.
Started tracking the views for routes.RobotsTxt.
Moved routeSitemapXml to routes.SitemapXml.
Started tracking the views for routes.SitemapXml.
Changed the fallback theme to Cosora.
Fixed changing the default theme to Cosora or Tempra Conflux.
Removed some redundant type definitions in template init.
Return ErrNoTitle instead of ErrNoBody when trying to create a topic with no title.
Moved some in-progress routes and helper functions for handling search engine crawlers to routes/api.go

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,3 +1,4 @@
+<div class="left_of_nav">{{dock "leftOfNav" .Header }}</div>
 <nav class="nav">
 	<div class="move_left">
 	<div class="move_right">
@@ -26,3 +27,4 @@
 	</div>
 	<div style="clear: both;"></div>
 </nav>
+<div class="right_of_nav">{{dock "rightOfNav" .Header }}</div>
