--- a/templates/panel_adminlogs.html
+++ b/templates/panel_adminlogs.html
@@ -18,8 +18,8 @@
 			{{range .Logs}}
 			<div class="rowitem panel_compactrow">
 				<span style="float: left;">
-					<span>{{.Action}}</span><br />
-					<small style="margin-left: 2px;font-size: 12px;">{{.IPAddress}}</small>
+					<span>{{.Action}}</span>
+					{{if $.CurrentUser.Perms.ViewIPs}}<br /><small style="margin-left: 2px;font-size: 12px;">{{.IPAddress}}</small>{{end}}
 				</span>
 				<span class="to_right">
 					<span style="font-size: 14px;">{{.DoneAt}}</span>
