Fixed the Go Version in the Travis file. Added the Go and Database versions to the Control Panel Debug Page. Renamed common.TopicsPage to common.TopicListPage. Renamed *HeaderVars to *Header. Added the Paginator struct and refactored the code to use it. io.Writers are now used instead of http.ResponseWriters in transpiled templates for greater flexibility. Added the alert, menu_alerts, and menu_item templates. Added support for more integer types in the arithmetic functions for the transpiled templates. Exported AccSelectBuilder. Added an Each method to AccSelectBuilder. Added column quoting to the order by portions of queries for the MySQL Adapter.
Began work on the client side rendering of alerts.
Began work on the Menu Manager and associated functionality.

--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -7,12 +7,21 @@
 		</div>
 		<div id="panel_debug" class="colstack_grid">
 			<div class="grid_item grid_stat"><span>{{lang "panel_debug_uptime_label"}}</span></div>
+			<div class="grid_item grid_stat"><span>{{lang "panel_debug_go_version_label"}}</span></div>
+			<div class="grid_item grid_stat"><span>{{lang "panel_debug_database_version_label"}}</span></div>
+			
+			<div class="grid_item grid_stat"><span>{{.Uptime}}</span></div>
+			<div class="grid_item grid_stat"><span>{{.GoVersion}}</span></div>
+			<div class="grid_item grid_stat"><span>{{.DBVersion}}</span></div>
+			
+
 			<div class="grid_item grid_stat"><span>{{lang "panel_debug_open_database_connections_label"}}</span></div>
 			<div class="grid_item grid_stat"><span>{{lang "panel_debug_adapter_label"}}</span></div>
+			<div class="grid_item grid_stat"><span>???</span></div>
 
-			<div class="grid_item grid_stat"><span>{{.Uptime}}</span></div>
 			<div class="grid_item grid_stat"><span>{{.OpenConns}}</span></div>
 			<div class="grid_item grid_stat"><span>{{.DBAdapter}}</span></div>
+			<div class="grid_item grid_stat"><span>?</span></div>
 		</div>
 	</main>
 </div>
