--- a/templates/panel_themes.html
+++ b/templates/panel_themes.html
@@ -6,6 +6,9 @@
 		<div class="rowitem"><a href="/panel/themes/">Theme Manager</a></div>
 	</div>
 	<div class="colstack_item rowmenu">
+		<div class="rowitem passive"><a href="/panel/themes/menus/">Menus</a></div>
+	</div>
+	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="#">Widgets</a></div>
 	</div>
 {{template "panel-inner-menu.html" . }}
