--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,16 +2,9 @@
 <nav class="nav">
 	<div class="move_left">
 	<div class="move_right">
-	<ul>{{/** Add a menu manager **/}}
+	<ul>
 		<li id="menu_overview" class="menu_left"><a href="/" rel="home">{{.Header.Site.ShortName}}</a></li>
-		<li id="menu_forums" class="menu_left"><a href="/forums/" aria-label="{{lang "menu_forums_aria"}}" title="{{lang "menu_forums_tooltip"}}"></a></li>
-		<li class="menu_left menu_topics"><a href="/" aria-label="{{lang "menu_topics_aria"}}" title="{{lang "menu_topics_tooltip"}}"></a></li>
-		<li id="general_alerts" class="menu_right menu_alerts">
-			<div class="alert_bell"></div>
-			<div class="alert_counter" aria-label="{{lang "menu_alert_counter_aria"}}"></div>
-			<div class="alert_aftercounter"></div>
-			<div class="alertList" aria-label="{{lang "menu_alert_list_aria"}}"></div>
-		</li>
+		{{dock "topMenu" .Header }}
 		{{if .CurrentUser.Loggedin}}
 		<li class="menu_left menu_account"><a href="/user/edit/critical/" aria-label="{{lang "menu_account_aria"}}" title="{{lang "menu_account_tooltip"}}"></a></li>
 		<li class="menu_left menu_profile"><a href="{{.CurrentUser.Link}}" aria-label="{{lang "menu_profile_aria"}}" title="{{lang "menu_profile_tooltip"}}"></a></li>
