All the menu items are dynamic now, all that needs to be done now is the Control Panel part of the Menu Manager. Travis should now build the patcher to see if that works. Merged menu.html into header.html Removed a redundant SetAdapter call in mysql.go. Fixed a bug where inserting will sometimes strip the spaces in strings. Bumped the minimum Go Version in schema.json to 1.10 Bumped the DBVersion to 1, so that we don't install these patches twice.
The patcher was botched in the previous commit, drop menus and menu_items and run it again

--- a/templates/header.html
+++ b/templates/header.html
@@ -20,10 +20,23 @@
 		{{if .Header.MetaDesc}}<meta name="description" content="{{.Header.MetaDesc}}" />{{end}}
 	</head>
 	<body>
-		<style>{{if not .CurrentUser.IsSuperMod}}.supermod_only { display: none !important; }{{end}}</style>
+		{{if not .CurrentUser.IsSuperMod}}<style>.supermod_only { display: none !important; }</style>{{end}}
 		<div class="container">
-{{template "menu.html" .}}
-<div id="back"><div id="main" {{if .Header.Widgets.RightSidebar}}class="shrink_main"{{end}}>
-<div class="alertbox">{{range .Header.NoticeList}}
-	<div class="alert">{{.}}</div>{{end}}
-</div>
+			<div class="left_of_nav">{{dock "leftOfNav" .Header }}</div>
+			<nav class="nav">
+				<div class="move_left">
+				<div class="move_right">
+				<ul>
+					<li id="menu_overview" class="menu_left"><a href="/" rel="home">{{.Header.Site.ShortName}}</a></li>
+					{{dock "topMenu" .Header }}
+					<li class="menu_left menu_hamburger" title="{{lang "menu_hamburger_tooltip"}}"><a></a></li>
+				</ul>
+				</div>
+				</div>
+				<div style="clear: both;"></div>
+			</nav>
+			<div class="right_of_nav">{{dock "rightOfNav" .Header }}</div>
+			<div id="back"><div id="main" {{if .Header.Widgets.RightSidebar}}class="shrink_main"{{end}}>
+			<div class="alertbox">{{range .Header.NoticeList}}
+				<div class="alert">{{.}}</div>{{end}}
+			</div>
