--- a/templates/panel_setting.html
+++ b/templates/panel_setting.html
@@ -24,7 +24,12 @@
 			{{else if eq .Something.Type "bool"}}
 			<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
-				<div class="formitem"><input name="setting-value" type="checkbox"{{if eq .Something.Content "1"}} checked{{end}} /></div>
+				<div class="formitem">
+					<select name="setting-value">
+						<option{{if eq .Something.Content "1"}} selected{{end}} value="1">{{lang "option_yes"}}</option>
+						<option{{if eq .Something.Content "0"}} selected{{end}} value="0">{{lang "option_no"}}</option>
+					</select>
+				</div>
 			</div>
 			{{else}}<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
