--- a/templates/panel_themes.html
+++ b/templates/panel_themes.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
 
-<nav class="colstack_left" aria-label="The control panel menu">
+<nav class="colstack_left" aria-label="Theme manager menu">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/themes/">Theme Manager</a></div>
 	</div>
