--- a/templates/account_own_edit_avatar.html
+++ b/templates/account_own_edit_avatar.html
@@ -9,7 +9,7 @@
 			<div class="rowitem"><img src="{{.CurrentUser.Avatar}}" height="128px" max-width="128px" /></div>
 		</div>
 		<div class="colstack_item the_form">
-			<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
+			<form action="/user/edit/avatar/submit/?session={{.CurrentUser.Session}}" method="post" enctype="multipart/form-data">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_avatar_upload_label"}}</a></div>
 					<div class="formitem"><input name="account-avatar" type="file" required /></div>
