--- a/templates/account_own_edit_username.html
+++ b/templates/account_own_edit_username.html
@@ -6,7 +6,7 @@
 			<div class="rowitem"><h1>{{lang "account_username_head"}}</h1></div>
 		</div>
 		<div class="colstack_item the_form">
-			<form action="/user/edit/username/submit/" method="post">
+			<form action="/user/edit/username/submit/?session={{.CurrentUser.Session}}" method="post">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_username_current_username"}}</a></div>
 					<div class="formitem formlabel">{{.CurrentUser.Name}}</div>
