You can now reorder menu items by dragging them around in the menu item manager. You can now create menu items. You can now delete menu items.
Renamed ID to MenuID on PanelMenuPage struct.
Bumped the copyright year in a place in advance.
The footer is no longer hidden in the Control Panel in Tempra Simple.
Fixed the notifications URL, although that page still isn't implemented yet.
Fixed config_default.noparse so that Travis won't error over that.
Refactored some user queries.

--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -180,6 +180,19 @@
 	content: "{{index .Phrases "panel_perms_default" }}";
 }
 
+.panel_submitrow .rowitem {
+	display: flex;
+}
+.panel_submitrow .rowitem *:first-child {
+	margin-left: auto;
+}
+.panel_submitrow .rowitem *:last-child {
+	margin-right: auto;
+}
+.panel_submitrow .rowitem button {
+	margin-top: 0px;
+}
+
 .colstack_graph_holder {
 	background-color: var(--element-background-color);
 	border: 1px solid var(--element-border-color);
