Alerts are now rendered via a client side transpiled template rather than being hard-coded. Tweaked some bits to make them more 32-bit friendly for GopherJS, but this might not be necessary now. Added notice.html Added an alerts package to fix the import cycles, more things may be moved here soon. Saved a few lines of accumulator code in a few stores. Moved the AccountEditCriticalSubmit, AccountEditAvatar, AccountEditAvatarSubmit, AccountEditUsername, and AccountEditUsernameSubmit routes into the routes package. Added a QueryRow method to AccSelectBuilder. Tweaked the indentation in the generated templates. Simplified the template render in the AccountEditUsernameSubmit route into a redirect back to the previous page.
Run the update script / patcher to replace the route names in the viewchunks table.

--- a/templates/header.html
+++ b/templates/header.html
@@ -38,5 +38,5 @@
 			<div class="right_of_nav">{{dock "rightOfNav" .Header }}</div>
 			<div id="back"><div id="main" {{if .Header.Widgets.RightSidebar}}class="shrink_main"{{end}}>
 			<div class="alertbox">{{range .Header.NoticeList}}
-				<div class="alert">{{.}}</div>{{end}}
+				{{template "notice.html" . }}{{end}}
 			</div>
